; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_snes.c_snes_anal_init.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_snes.c_snes_anal_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@snesflags = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @snes_anal_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snes_anal_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @snesflags, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %1
  %6 = call i64 @malloc(i32 4)
  store i64 %6, i64* @snesflags, align 8
  br label %7

7:                                                ; preds = %5, %1
  %8 = load i64, i64* @snesflags, align 8
  %9 = call i32 @memset(i64 %8, i32 0, i32 4)
  ret i32 0
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @memset(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
